--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <title>SuperHero API</title>
 </head>
 
@@ -13,7 +15,7 @@
     <nav class="header">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="favorites.html">Favourites</a></li>
+            <li><a href="favourites.html">Favourites</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -27,6 +29,8 @@
     </div>
 
     <script src="index.js"></script>
+    <script src="herodetails.js"></script>
+    <script src="favourites.js"></script>
 </body>
 
 </html>
